--- a/index.html
+++ b/index.html
@@ -5,34 +5,52 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Vivien Chang</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Josefin+Slab" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css">
 </head>
 <body>
     <!-- LANDING PAGE -->
 <section class="landing-page">
-  <div class="landing-page-div">
+  <!-- <div class="landing-page-div"> -->
     <h2 id="time"></h2>
-    <h3><span id="welcome-line">_____</span>, Welcome to my page!</h3>
+    <h3><span id="welcome-line"></span>, Welcome to my page!</h3>
     <h3> My name is Vivien</h3>
-    <h3>I am a <span id="person-id">____________________</span></h3>
-  </div>
-  <!-- TODO: this is the button angle to go down make sure you know how to do this -->
-  <!-- <a href="#about" class="down">
-    <i class="fa fa-angle-down"></i>
-  </a> -->
+    <h3 id="last-intro">I am a <span id="person-id">Full Stack Engineer</span></h3>
+  <!-- </div> -->
+  <a href="#about" class="down">
+    <i class="fas fa-angle-double-down icon-large"></i>
+  </a>
 </section>
 
     <!-- TODO: ABOUT ME PAGE -->
-<section class="about-me">
-    <img>
-    <p></p>
-</section>
+<!-- <section id="about" class="about-me">
+  <div class="container">
+    <div class="row">
+      <div class="col about-one">
+         <img>
+        1 of 2
+      </div>
+      <div class="col about-two">
+        <p>
+          I like to create stuff. The short list includes Ikea furniture, Legos, and websites.
+        </p>
+        <p>
+          This site is meant to serve as a creative showcase of some of the projects I've worked on and as a place where I can break and rebuild projects differently.
+        </p> -->
+        <!--  I want this section to have an arrow to flip to the next page that will show case a bunch of sliding scales of what I'm good at - sort of like a resume -->
+<!--       </div>
+    </div>
+  </div>
+</section> -->
     <!-- TODO: THINGS I'VE BUILT PAGE -->
 <section class="things-i-built">
     <!-- TODO: grid box flow -->
 </section>
     <!-- TODO: footer/contact me page -->
+<section class="footer">
+</section>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="main.js"></script>
 </body>
