--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
     <!-- LANDING PAGE -->
 <section class="landing-page">
-  <!-- <div class="landing-page-div"> -->
-    <h2 id="time"></h2>
-    <h3><span id="welcome-line"></span>, Welcome to my page!</h3>
-    <h3> My name is Vivien</h3>
-    <h3 id="last-intro">I am a <span id="person-id">Full Stack Engineer</span></h3>
-  <!-- </div> -->
-  <a href="#about" class="down">
-    <i class="fas fa-angle-double-down icon-large"></i>
-  </a>
+  <h3><span id="welcome-line"></span>, Welcome to my page!</h3>
+  <h3> My name is Vivien</h3>
+  <h3 id="last-intro">I am a <span id="person-id">Full Stack Engineer</span></h3>
+  <div id="arrow-icon">
+    <a href="#about" id="down">
+      <i class="fas fa-angle-double-down icon-large"></i>
+    </a>
+  </div>
+
 </section>
 
     <!-- TODO: ABOUT ME PAGE -->
