--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h3> My name is Vivien</h3>
   <h3 id="last-intro">I am a <span id="person-id">Full Stack Engineer</span></h3>
   <div id="arrow-icon">
-    <a href="#about" id="down">
+    <a href="#about" id="arrow-down">
       <i class="fas fa-angle-double-down icon-large"></i>
     </a>
   </div>
@@ -25,7 +25,7 @@
 </section>
 
     <!-- TODO: ABOUT ME PAGE -->
-<!-- <section id="about" class="about-me">
+<section id="about" class="about-me">
   <div class="container">
     <div class="row">
       <div class="col about-one">
@@ -38,12 +38,12 @@
         </p>
         <p>
           This site is meant to serve as a creative showcase of some of the projects I've worked on and as a place where I can break and rebuild projects differently.
-        </p> -->
+        </p>
         <!--  I want this section to have an arrow to flip to the next page that will show case a bunch of sliding scales of what I'm good at - sort of like a resume -->
-<!--       </div>
+      </div>
     </div>
   </div>
-</section> -->
+</section>
     <!-- TODO: THINGS I'VE BUILT PAGE -->
 <section class="things-i-built">
     <!-- TODO: grid box flow -->
